Fix the display of content inside the top users container on small screen

--- a/src/styles/FollowButtons.module.css
+++ b/src/styles/FollowButtons.module.css
@@ -43,9 +43,9 @@
     }
   }
   
-  /* Adjust display of the top users container follow buttons, user icon & name */
+  /* Adjust display of the follow buttons centered below the username */
   @media all and (max-width: 768px) {
     .FollowButtonsRemove {
-      display: block;
+      display: contents;
     }
 }
